--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,13 +4,11 @@
         "commonjs": true,
         "es6": true
     },
-    "extends": "eslint:recommended",
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
+    "extends": [
+        "airbnb-base"
+    ],
     "parserOptions": {
-        "ecmaVersion": 2018
+        "ecmaVersion": 11
     },
     "rules": {
     }
